fix: right-align EditBox numbers

--- a/src/numberbox/numberbox.css
+++ b/src/numberbox/numberbox.css
@@ -1,4 +1,5 @@
 /* NumberBox inherits the default TextBox theme. */
 .fui-numberbox .fui-textbox-text {
   ime-mode: disabled;
+  text-align: right;
 }
